# hierarchical-hnet

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  README.md  TRAINING_STRUCTURE.md  generate.py  pyproject.toml
bash/: evaluate_example.sh  train_distributed.sh  train_example.sh  train_fineweb.sh  train_fineweb_resume.sh
configs/: hnet_1stage_L.json  hnet_1stage_XL.json  hnet_2stage_L.json  hnet_2stage_XL.json  hnet_2stage_XL_chinese.json  hnet_2stage_XL_code.json
diagnostic_analysis/: README.md  analyze_architecture.py  analyze_data_pipeline.py  analyze_generation.py  analyze_training.py  analyze_training_config.py  diagnostic_report.md  test_fixes.py  test_fixes_simple.py
evaluation/: README.md  __init__.py  evaluate_bpb.py  evaluate_downstream.py  hnet_lm_wrapper.py  run_all.sh  run_parallel_tasks.sh  test_eval_quick.sh  utils_eval.py
evaluation_results/: bpb_results.json
hnet/models/: __init__.py  config_hnet.py  hnet.py  mixer_seq.py
hnet/modules/: block.py  dc.py  isotropic.py  mha.py  mlp.py  rotary.py  utils.py
hnet/utils/: tokenizers.py  train.py
scripts/: README.md  download_checkpoint.py  download_dataset.py  evaluate.py  evaluate_example.sh  generate.py  lint.sh  run_distributed_local.sh  submit_train_4gpu.sh  submit_train_4gpu_optimized.sh  submit_train_multi_node.sh  train.py  train_distributed.sh  train_example.sh  train_fineweb.sh  train_fineweb_resume.sh  train_fixed.py
scripts/analysis/: analyze_architecture.py  analyze_generation.py  analyze_training.py
scripts/legacy/: fix_training_config.py  resume_training_local.sh  slurm_train_custom.sh  slurm_train_fixed.sh  submit_train_4gpu.sh  test_generation_fixed.sh  train_distributed.sh  train_fineweb_distributed.sh
scripts/utilities/: monitor_training.py  test_fixes.py  test_fixes_simple.py
training/: __init__.py  config.py  data.py  distributed.py  losses.py  metrics.py  utils.py
training_configs/: README.md  load_hyperparams.sh
training_configs/1stage_L/: hyperparams.json  train_cluster.sh  train_dev.sh
training_configs/1stage_XL/: hyperparams.json  train_cluster.sh  train_dev.sh
training_configs/2stage_L/: hyperparams.json  train_cluster.sh  train_dev.sh
training_configs/2stage_XL/: hyperparams.json  train_cluster.sh  train_dev.sh
